--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -10,7 +10,7 @@ jobs:
       - name: Set package versions
         id: pkg_versions
         run: |
-          echo "v0.0.1" | grep --perl-regexp 'v\d+\.\d+' -o > $MAJOR_VERSION
+          MAJOR_VERSION=$(echo "v0.0.1" | grep --perl-regexp 'v\d+\.\d+' -o)
           echo "::set-output name=MAJOR_VERSION::$MAJOR_VERSION"
         # echo "v0.0.1" | grep --perl-regexp 'v\d+\.\d+' -o
       - name: Get package versions
