--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -10,8 +10,15 @@ jobs:
       - name: Set package versions
         id: pkg_versions
         run: |
-          MAJOR_VERSION=$(echo "v0.0.1" | grep --perl-regexp 'v\d+\.\d+' -o)
-          echo "::set-output name=MAJOR_VERSION::$MAJOR_VERSION"
+          MAJOR_VERSION=$(echo "v0.0.1" | grep --perl-regexp 'v\d+' -o)
+          MINOR_VERSION=$(echo "v0.0.1" | grep --perl-regexp 'v\d+\.\d+' -o)
+          PATCH_VERSION=$(echo "v0.0.1" | grep --perl-regexp 'v\d+\.\d+\.\d+' -o)
+          ::set-output name=MAJOR_VERSION::$MAJOR_VERSION
+          ::set-output name=MINOR_VERSION::$MINOR_VERSION
+          ::set-output name=PATCH_VERSION::$PATCH_VERSION
         # echo "v0.0.1" | grep --perl-regexp 'v\d+\.\d+' -o
       - name: Get package versions
-        run: "echo 'MAJOR VERSION: ${{ steps.pkg_versions.outputs.MAJOR_VERSION }}'"
+        run: |
+          "echo 'MAJOR VERSION: ${{ steps.pkg_versions.outputs.MAJOR_VERSION }}'"
+          "echo 'MINOR VERSION: ${{ steps.pkg_versions.outputs.MINOR_VERSION }}'"
+          "echo 'PATCH VERSION: ${{ steps.pkg_versions.outputs.PATCH_VERSION }}'"
