--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -10,12 +10,12 @@ jobs:
       - name: Set package versions
         id: pkg_versions
         run: |
-          MAJOR_VERSION=$(echo "v0.0.1" | grep --perl-regexp 'v\d+' -o)
-          MINOR_VERSION=$(echo "v0.0.1" | grep --perl-regexp 'v\d+\.\d+' -o)
-          PATCH_VERSION=$(echo "v0.0.1" | grep --perl-regexp 'v\d+\.\d+\.\d+' -o)
-          echo "::set-output name=MAJOR_VERSION::$MAJOR_VERSION"
-          echo "::set-output name=MINOR_VERSION::$MINOR_VERSION"
-          echo "::set-output name=PATCH_VERSION::$PATCH_VERSION"
+          MAJOR_VERSION=$(echo "v0.0.1" | grep --perl-regexp 'v\d+' -o);
+          MINOR_VERSION=$(echo "v0.0.1" | grep --perl-regexp 'v\d+\.\d+' -o);
+          PATCH_VERSION=$(echo "v0.0.1" | grep --perl-regexp 'v\d+\.\d+\.\d+' -o);
+          echo "::set-output name=MAJOR_VERSION::$MAJOR_VERSION";
+          echo "::set-output name=MINOR_VERSION::$MINOR_VERSION";
+          echo "::set-output name=PATCH_VERSION::$PATCH_VERSION";
         # echo "v0.0.1" | grep --perl-regexp 'v\d+\.\d+' -o
       - name: Get package versions
         run: |
