--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -27,7 +27,15 @@ jobs:
         with:
           args: |
             s3 cp text.txt s3://clappy-button-web-component/v${{ steps.pkg_versions.outputs.MAJOR_VERSION }}.txt
-            s3 cp test.txt s3://clappy-button-web-component/v${{ steps.pkg_versions.outputs.MINOR_VERSION }}.txt
+        env:
+          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_IAM_ADMIN_ACCESS_KEY_ID}}
+          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_IAM_ADMIN_ACCESS_KEY }}
+          AWS_DEFAULT_REGION: us-east-1
+      - name: Upload to S3
+        uses: ItsKarma/aws-cli@v1.70.0
+        with:
+          args: |
+            s3 cp text.txt s3://clappy-button-web-component/v${{ steps.pkg_versions.outputs.MINOR_VERSION }}.txt
         env:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_IAM_ADMIN_ACCESS_KEY_ID}}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_IAM_ADMIN_ACCESS_KEY }}
